인증 유저 리스트 필터링에서 인증여부 추가
